[package]
name = "shamir-secrets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.15", features = ["derive"] }
ibig = "0.3.5"
image = "0.24.2"
rand = "0.8.5"
mod_exp = "1.0.1"
